# hf-rvc

./: .gitignore  LICENSE  Pipfile  README.md  cspell.config.yaml  setup.cfg
.github/workflows/: python-app.yml  python-unittest.yml
hf_rvc/: __init__.py  __main__.py
hf_rvc/converters/: __init__.py  __main__.py  convert_hubert.py  convert_rvc.py  convert_vits.py
hf_rvc/models/: __init__.py  configuration_rvc.py  feature_extraction_rvc.py  modeling_rvc.py
hf_rvc/models/vits/: __init__.py  attentions.py  models.py  modules.py
hf_rvc/tools/: __init__.py  audio_devices.py  eval_dataset.py  gradio_vc.py  realtime_vc.py
hf_rvc/utils/: formatting.py  path.py
tests/: test_hf_rvc.py
tests/models/: test_feature_extraction_rvc.py
