[metadata]
name = hf_rvc
version = 0.1.0
author = esnya
description = Retrieval-based Voice Conversion (RVC) implemented with Hugging Face Transformers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/esnya/hf_rvc
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = hf_rvc
packages = find:
install_requires =
    torch
    datasets
    pyworld
    transformers
    evaluate
    argh
    safetensors
    fairseq
    librosa
extras_require =
    dev =
        bandit
python_requires = >=3.10

[options.packages.find]
where = src
