[metadata]
name = hf_rvc
version = 0.2.1
author = esnya
description = Retrieval-based Voice Conversion (RVC) implemented with Hugging Face Transformers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/esnya/hf_rvc
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages=find:
install_requires =
    torch
    pyworld
    transformers
    evaluate
    argh
    safetensors
    librosa
    praat-parselmouth

[options.extras_require]
converter = fairseq
gradio =
    gradio
    accelerate
    optimum
eval =
    datasets
    pyaudio
full =
    fairseq
    datasets
    pyaudio
    argh
